--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
     "checkJs": true,
     "jsx": "preserve",
     "moduleResolution": "node",
     "noEmit": true,
-    "target": "es2020",
+    "target": "es2020"
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
